# neurosymbolic-sql-adapter

./: DOCUMENTATION_SUMMARY.md  README.md  VERIFICATION_REPORT.md  blog-post-neurosymbolic-sql-adapter.md  create_complete_docs.py  create_detailed_docs.py  demo_full_functionality.py  fix_pydoc.py  generate_docs.py  pyproject.toml  requirements.txt  requirements_minimal.txt  test_full_functionality.py  test_integration.py  verify_implementation.py  verify_integration.py
configs/: neurosymbolic_config.yaml  sql_reasoning_rules.json
docs/: README.md  bridgelayer.html  confidenceestimator.html  factextractor.html  index.html  neurosymbolicadapter.html
docs/examples/: index.html
docs/guides/: architecture.md  index.html  quick_start.md
docs/pydoc/: adapters.adapter_trainer.html  adapters.bridge_layer.html  adapters.confidence_estimator.html  adapters.fact_extractor.html  adapters.model_manager.html  adapters.neurosymbolic_adapter.html  index.html
examples/: advanced_training_example.py  basic_integration.py  production_training_example.py
src/: __init__.py
src/adapters/: __init__.py  adapter_trainer.py  bridge_layer.py  confidence_estimator.py  fact_extractor.py  model_manager.py  neurosymbolic_adapter.py
src/evaluation/: __init__.py  evaluation_framework.py  reasoning_quality.py  (+3 more)
test_save/: adapter_config.json  model_info.json
tests/: test_constraint_validator.py  test_integration.py  test_neural_adapters.py  test_pyreason_engine.py  test_sql_knowledge_base.py
training_configs/: advanced_training_config.yaml  production_config.yaml  research_config.yaml
(+10 files in other folders)
